--- a/CaffeineCount/src/main/resources/application.properties
+++ b/CaffeineCount/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=user
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jmx.default-domain=CaffeineCount
+
