--- a/CaffeineCount/src/main/resources/application.properties
+++ b/CaffeineCount/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/caffeinecountdb?useSSL=false&&
 spring.datasource.username=user
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jmx.default-domain=CaffeineCount
 
