--- a/CaffeineCount/build.gradle
+++ b/CaffeineCount/build.gradle
@@ -5,11 +5,11 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
+apply plugin: 'war'
 war {
-  // Gradle will replace the variable archivesBaseName
-  // with our app name, as defined in settings.gradle
+  enabled = true
   archiveFileName = "${archivesBaseName}.war"
-  destinationDirectory = file("../")     // Project workspace directory
+  destinationDirectory = file("../")          // Project workspace directory
 }
 
 group = 'com.example'
